--- a/libvncserver/PKGBUILD
+++ b/libvncserver/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=libvncserver
 pkgver=0.9.13
 pkgrel=1
 pkgdesc="Cross-platform C libraries that allow you to easily implement VNC server or client functionality"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libvnc.github.io/"
 license=('GPL')
 depends=('libpng' 'libjpeg' 'gnutls' 'libgcrypt' 'openssl' 'libnsl')
