--- a/kde/krdc/PKGBUILD
+++ b/kde/krdc/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=krdc
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Remote Desktop Client'
 url='https://apps.kde.org/krdc/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-network)
 depends=(kcmutils kdnssd knotifyconfig)
@@ -18,11 +18,12 @@ optdepends=('libvncserver: VNC support'
             'freerdp: RDP support'
             'keditbookmarks: to edit bookmarks')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('547cf6226118d2aead49e864730ff26d12e4b58a207ed426fa4d388ab90cf52b'
+sha256sums=('12088c5881c66897e698477d813cb5fa31f221b55cab74c53e94b6ba294bd726'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
