--- a/kde/xdg-desktop-portal/PKGBUILD
+++ b/kde/xdg-desktop-portal/PKGBUILD
@@ -4,17 +4,16 @@
 # Contributor: Patrick Griffis <tingping@tingping.se>
 
 pkgname=xdg-desktop-portal
-pkgver=1.14.1
+pkgver=1.14.2
 pkgrel=1
 pkgdesc="Desktop integration portals for sandboxed apps"
 url="https://github.com/flatpak/xdg-desktop-portal"
-arch=(x86_64 powerpc64le powerpc)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2 pipewire fuse3 geoclue2 rtkit systemd)
 makedepends=(python xmlto docbook-xsl git flatpak libportal)
 options=(debug)
-_commit=6e9ab0bfdc82043b4b27b5e4f77da982ac010587  # tags/1.14.1
+_commit=eec57b25a68c10f967f04630515dd74c2bb90624  # tags/1.14.2
 source=("git+https://github.com/flatpak/xdg-desktop-portal#commit=$_commit")
 sha256sums=('SKIP')
 
