--- a/kde/kteatime/PKGBUILD
+++ b/kde/kteatime/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kteatime
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A handy timer for steeping tea'
 url='https://apps.kde.org/kteatime/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-utilities)
 depends=(knotifyconfig hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('5e20b67f9d717d4bcbf3cacd59687c29305ae150889e3b20820f90bfc9a0578d'
+sha256sums=('a4c0994170a877b14b8b66e68021a6ef03e5e427380c135caf99218f54d07744'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
