--- a/kde/ktimer/PKGBUILD
+++ b/kde/ktimer/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ktimer
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Countdown Launcher'
 url='https://apps.kde.org/ktimer/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(kio hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(kde-applications kde-utilities)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b5ad66d8c67ad0305c4e6c18193ca43e8aa0b8229ec5156d1e474e5d3e8ab266'
+sha256sums=('b750899fd70b3177ec014db348cf309b39c84d0b3b86ef236bc94cdb9f5fdf68'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
