--- a/kde/ktouch/PKGBUILD
+++ b/kde/ktouch/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ktouch
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Touch Typing Tutor'
 url='https://apps.kde.org/ktouch/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
 depends=(kqtquickcharts libxkbfile kcmutils hicolor-icon-theme qt5-quickcontrols2 qt5-graphicaleffects qt5-xmlpatterns)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('747c4c8a20f61ebc24f33185ca37e4effe9c8cf4b4b4f6589071b0a3548ce520'
+sha256sums=('cd0ab11fff7cb03c40569f9cdcdef9db723044b87372bb2126baeb82f20b2072'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
