--- a/audiofile/PKGBUILD
+++ b/audiofile/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=audiofile
 pkgver=0.3.6
 pkgrel=6
 pkgdesc="Silicon Graphics Audio File Library"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://audiofile.68k.org/"
 license=('GPL2' 'LGPL2.1')
 depends=('gcc-libs' 'alsa-lib' 'flac')
