--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -3,11 +3,12 @@
 
 pkgbase=linux
 pkgver=5.17.2.arch3
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://github.com/archlinux/linux/commits/$_srctag"
 arch=(powerpc64le powerpc)
+arch=(powerpc)
 license=(GPL2)
 makedepends=(
   bc kmod libelf pahole
@@ -33,7 +34,7 @@ validpgpkeys=(
 )
 sha256sums=('SKIP'
             'e44a3442fb16abdf162ae4782515fe8f2935dbc51eea804d747552bc3a6e1f9f'
-            'c0906a316f688d14d0d7a78ec301f7518ea66e5b550e290277ee41e75fe362ce'
+            '08dee9b6fe402d6ef7b9a8bb5b6f769c8e276c9e9182c519e4eeb7635c64c74c'
             'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38'
             '07dbbf3e8f743e8d2ad90891a8b567392271db139e339529df1ab4387e0e6400'
             'fe9ab724dc8002cb5625e11b6dbddf1a5c4afb64eb79585a6228e131f20a3ae6'
