--- a/kde/kwave/PKGBUILD
+++ b/kde/kwave/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Gustavo alvarez <sl1pkn07@gmail.com>
 
 pkgname=kwave
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A sound editor'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/kwave/'
 license=(GPL)
 depends=(kio audiofile libmad libsamplerate hicolor-icon-theme id3lib fftw)
@@ -15,11 +15,12 @@ makedepends=(extra-cmake-modules kdoctools doxygen librsvg opus)
 optdepends=('opus: OGG plugin')
 groups=(kde-applications kde-multimedia)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('85c74147079a3502dc97a4aa37c6513106152a1c6c4c7dacbf01786ac5a18861'
+sha256sums=('62abb66938d883293b49f05905ee076934ae3a9f65bb3eeb5d94de57625cab1f'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
