--- a/kde/lokalize/PKGBUILD
+++ b/kde/lokalize/PKGBUILD
@@ -1,25 +1,25 @@
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=lokalize
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Computer-Aided Translation System'
 url='https://apps.kde.org/lokalize/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kdesdk)
 depends=(kio hunspell hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 optdepends=('languagetool: spell and grammar checking')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7f30f32c53b2682dd3664ffb0a9af131c1530e48666759c4c49b8496c0d53722'
+sha256sums=('d6629a2a575f558fff1f40c370e14efec08ebf38bfa0ac22e8f39ce1a58aeebf'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
