--- a/libwlocate/PKGBUILD
+++ b/libwlocate/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.1
 pkgrel=3
 epoch=1
 pkgdesc="A shared library that can be used for location-based services"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sourceforge.net/projects/libwlocate"
 license=(GPL)
 depends=(wireless_tools glibc)
