--- a/shapelib/PKGBUILD
+++ b/shapelib/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=shapelib
 pkgver=1.5.0
 pkgrel=3
 pkgdesc='Simple C API for reading and writing ESRI Shapefiles'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://shapelib.maptools.org/'
 license=('LGPL')
 depends=('gcc-libs')
@@ -17,7 +17,8 @@ sha256sums=('1fc0a480982caef9e7b9423070b47750ba34cd0ba82668f2e638fab1d07adae1')
 build() {
   cd $pkgname-$pkgver
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr \
+              --build=${CHOST}
   make
 }
 
