--- a/kde/parley/PKGBUILD
+++ b/kde/parley/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=parley
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Vocabulary Trainer'
 url='https://apps.kde.org/parley/'
@@ -15,11 +15,12 @@ depends=(knewstuff libkeduvocdocument qt5-webengine kcmutils)
 makedepends=(extra-cmake-modules kdoctools)
 optdepends=('translate-shell: Google Translate integration')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c04763d2904e9fa2984f30a12e0820540de01dd2f79d877bcd219a14ab5632c1'
+sha256sums=('80c7b873e964e2ee12166159648eccca313be112c489e3aa57e53f400b421b82'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
