--- a/kde/kcolorpicker/PKGBUILD
+++ b/kde/kcolorpicker/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=kcolorpicker
 pkgver=0.1.6
-pkgrel=1
+pkgrel=1.1
 pkgdesc='Qt based Color Picker with popup menu'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/DamirPorobic/kColorPicker'
 license=(GPL)
 makedepends=(cmake)
