--- a/kde/step/PKGBUILD
+++ b/kde/step/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=step
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Interactive Physical Simulator'
 url='https://apps.kde.org/step/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
 depends=(libqalculate gsl knewstuff kplotting hicolor-icon-theme)
-makedepends=(extra-cmake-modules kdoctools eigen qt5-tools)
+makedepends=(extra-cmake-modules kdoctools eigen qt5-tools python)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c4e4a5392cb7ec72a6f1ddf3d20ab6af93b103e8468c98ac938278ff0bf702ee'
+sha256sums=('ac1d98c386b945bc5f96854bce7fd907a5ac3785cc56b05ca6640dd9d7307c48'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
