--- a/farstream/PKGBUILD
+++ b/farstream/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=farstream
 pkgver=0.2.9
-pkgrel=2
+pkgrel=3
 pkgdesc="Farstream (formerly Farsight) - Audio/Video Communications Framework"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/Farstream"
 license=('LGPL')
 depends=('gst-plugins-base-libs' 'libnice')
