--- a/kde/telepathy-farstream/PKGBUILD
+++ b/kde/telepathy-farstream/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=telepathy-farstream
 pkgver=0.6.2
-pkgrel=9
+pkgrel=10
 pkgdesc="Telepathy GLib-based client library that uses Farstream to handle Call channels"
-arch=(x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://telepathy.freedesktop.org/components/telepathy-farstream/"
 license=(LGPL2.1)
 depends=(telepathy-glib farstream)
