--- a/kde/telepathy-kde-accounts-kcm/PKGBUILD
+++ b/kde/telepathy-kde-accounts-kcm/PKGBUILD
@@ -5,10 +5,10 @@
 
 pkgname=telepathy-kde-accounts-kcm
 _pkgname=ktp-accounts-kcm
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KCM Module for configuring Telepathy Instant Messaging Accounts'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/KTp'
 license=(GPL)
 groups=(kde-applications kde-network telepathy-kde)
@@ -17,11 +17,12 @@ makedepends=(extra-cmake-modules intltool)
 optdepends=('telepathy-gabble: XMPP/Jabber accounts support' 'telepathy-haze: account types supported by Pidgin/libpurple'
             'telepathy-morse: Telegram accounts support' 'telepathy-salut: link-local XMPP account support')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$_pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0bc427c8d78ea502fd3f45a37b272aa328282ac0fd119b8eaf45f76d369fea1b'
+sha256sums=('b6d0197c35b18c427d2b1f7b100c27d1bf17f5d005f9bbb9e66fab637874baf9'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $_pkgname-$pkgver \
