--- a/kde/telepathy-kde-approver/PKGBUILD
+++ b/kde/telepathy-kde-approver/PKGBUILD
@@ -5,21 +5,22 @@
 
 pkgname=telepathy-kde-approver
 _pkgname=ktp-approver
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KDE Channel Approver for Telepathy'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/KTp'
 license=(GPL)
 groups=(kde-applications kde-network telepathy-kde)
 depends=(telepathy-qt knotifications kservice)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$_pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('2fad8579e0951867bb57a8849fc30be34f2d44ea3f694ee32c37d67fd5687836'
+sha256sums=('d4f65474281a63bff0f67ad08f3206fa7038b41450e4226c0355f806d8fd6c57'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $_pkgname-$pkgver
