--- a/mongo-c-driver/PKGBUILD
+++ b/mongo-c-driver/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=mongo-c-driver
-pkgver=1.20.1
-pkgrel=1
+pkgver=1.21.1
+pkgrel=2
 pkgdesc='A client library written in C for MongoDB'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.mongodb.org/display/DOCS/C+Language+Center'
@@ -14,9 +14,8 @@ provides=('libbson' 'libmongoc')
 conflicts=('libbson' 'libmongoc')
 replaces=('libbson' 'libmongoc')
 source=("https://github.com/mongodb/mongo-c-driver/releases/download/$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('ee55cd1b27ca6c3b404e47aa0fe375d9c9e8d46a892391e1f1ad404880a57d67bc4a44ebd5df4e3cee218a7e251ad464b0b14dee2bac0382019a2b82e348860b')
-
-
+sha512sums=('e9022c969eb84f00e3abaf6a7404532b5fb6b57bcfa518176549fefe394cf79dfb4c2e288451d9524bce2ddd76bee28aaab5132f805c0329f618c21913552607')
+options=(!distcc)
 
 prepare() {
   mkdir -p build
