--- a/libmspub/PKGBUILD
+++ b/libmspub/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=libmspub
 pkgver=0.1.4
-pkgrel=11
+pkgrel=12
 pkgdesc="Microsoft Publisher file format parser library (latest snapshot)"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://wiki.documentfoundation.org/DLP/Libraries/libmspub"
 license=('GPL2' 'LGPL2.1' 'MPL')
 depends=('libwpd' 'icu' 'librevenge')
