--- a/libqxp/PKGBUILD
+++ b/libqxp/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=libqxp
 pkgver=0.0.2
-pkgrel=7
+pkgrel=8
 pkgdesc="a library that parses the file format of QuarkXPress documents"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://wiki.documentfoundation.org/DLP/Libraries/libqxp"
 license=('MPL2')
 depends=('librevenge')
