--- a/abseil-cpp/PKGBUILD
+++ b/abseil-cpp/PKGBUILD
@@ -3,15 +3,15 @@
 # Contributor: Aleksandar Trifunović <akstrfn at gmail dot com>
 
 pkgname=abseil-cpp
-pkgver=20210324.2
-pkgrel=1
+pkgver=20211102.0
+pkgrel=2
 pkgdesc="Collection of C++ library code designed to augment the C++ standard library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://abseil.io'
 license=('Apache')
 makedepends=('cmake')
-source=("${pkgname}-${pkgver}.tar.gz::https://github.com/abseil/abseil-cpp/archive/refs/tags/${pkgver}.tar.gz")
-sha256sums=('59b862f50e710277f8ede96f083a5bb8d7c9595376146838b9580be90374ee1f')
+source=("https://github.com/abseil/abseil-cpp/archive/$pkgver/$pkgname-$pkgver.tar.gz")
+sha256sums=('dcf71b9cba8dc0ca9940c4b316a0c796be8fab42b070bb6b7cab62b48f0e66c4')
 
 prepare() {
   cd "$srcdir/$pkgname-$pkgver"
