--- a/re2/PKGBUILD
+++ b/re2/PKGBUILD
@@ -5,17 +5,18 @@
 # Contributor: Alexandre Bique <bique.alexandre@gmail.com>
 
 pkgname=re2
-_re2ver=2021-09-01
-pkgver=${_re2ver//-}
-pkgrel=1.1
+_re2ver=2022-04-01
+pkgrel=1
 epoch=1
+pkgver=${_re2ver//-}
 pkgdesc="Fast, safe, thread-friendly regular expression engine"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/google/re2"
 license=('BSD')
 depends=('gcc-libs')
+options=('debug')
 source=(re2-$pkgver.tar.gz::https://github.com/google/re2/archive/$_re2ver.tar.gz)
-sha256sums=('42a2e1d56b5de252f5d418dc1cc0848e9e52ca22b056453988b18c6195ec7f8d')
+sha256sums=('1ae8ccfdb1066a731bba6ee0881baad5efd2cd661acd9569b689f2586e1a50e9')
 
 build() {
   cd $pkgname-$_re2ver
