--- a/mdds/PKGBUILD
+++ b/mdds/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: kusakata <shohei atmark kusakata period com>
 
 pkgname=mdds
-pkgver=1.7.0
-pkgrel=3
+pkgver=2.0.2
+pkgrel=1
 pkgdesc="A collection of multi-dimensional data structures and indexing algorithms"
-arch=('any')
+arch=(any)
 url="https://gitlab.com/mdds/mdds"
 license=('MIT')
 checkdepends=('boost')
 #source=(https://gitlab.com/mdds/mdds/repository/archive.tar.gz?ref=${pkgver})
 source=(https://kohei.us/files/mdds/src/${pkgname}-${pkgver}.tar.xz)
-# checksums listed there - https://gitlab.com/mdds/mdds
-sha256sums=('c55a87ea8f110185ed1a570b4df44eeaf187079c1afc2bb821bea36f4c07cde8')
+# checksums listed there - https://gitlab.com/mdds/mdds/-/releases
+sha256sums=('1f8c165695f5d2e4375bab32a0f1507868dee3de0a20d524770078ba3c6c10bf')
 
 build() {
   cd ${pkgname}-${pkgver}
