--- a/spdlog/PKGBUILD
+++ b/spdlog/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Michael Yang
 
 pkgname=spdlog
-pkgver=1.9.2
+pkgver=1.10.0
 pkgrel=1
 pkgdesc='Very fast, header-only/compiled, C++ logging library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/gabime/spdlog'
 license=('MIT')
 depends=('libfmt.so')
 makedepends=('cmake')
+options=(debug)
 source=(
     "$pkgname-$pkgver.tar.gz::https://github.com/gabime/spdlog/archive/v$pkgver.tar.gz"
 )
 provides=(
     'libspdlog.so'
 )
-sha256sums=('6fff9215f5cb81760be4cc16d033526d1080427d236e86d70bb02994f85e3d38')
+sha256sums=('697f91700237dbae2326b90469be32b876b2b44888302afbc7aceb68bcfe8224')
 
 build() {
     export CFLAGS+=" ${CPPFLAGS}"
