--- a/libnumbertext/PKGBUILD
+++ b/libnumbertext/PKGBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=libnumbertext
-pkgver=1.0.7
+pkgver=1.0.10
 pkgrel=1
 pkgdesc="Number to number name and money text conversion library"
 arch=(x86_64 powerpc64le)
 url="https://github.com/Numbertext/libnumbertext"
 license=('LGPL3' 'custom')
 depends=('gcc-libs')
-source=(https://github.com/Numbertext/libnumbertext/archive/$pkgver.tar.gz)
-sha256sums=('5ea8359532d7b8d7a1b63ccc7825fb3b4f8c6dcdee75cb80206d9647c50d4a03')
+source=(${pkgname}-${pkgver}::https://github.com/Numbertext/libnumbertext/archive/$pkgver.tar.gz)
+sha256sums=('46a5ea59789ee683c14ceb5339d7fb7d4abd956b2b838ff13d7b8e0ed9af43f1')
 
 prepare() {
   cd "$pkgname-$pkgver"
@@ -20,6 +20,7 @@ prepare() {
 build() {
   cd "$pkgname-$pkgver"
   ./configure --prefix=/usr
+  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
