--- a/coin-or-coinutils/PKGBUILD
+++ b/coin-or-coinutils/PKGBUILD
@@ -4,32 +4,31 @@
 # Derived from Daniel Ehlers'
 
 pkgname=coin-or-coinutils
-pkgver=2.11.4
+pkgver=2.11.6
 pkgrel=1
-pkgdesc="COIN-OR collection of utility classes"
-arch=(x86_64 powerpc64le)
-url="https://projects.coin-or.org/CoinUtils"
+pkgdesc='COIN-OR collection of utility classes'
+arch=(x86_64 powerpc64le powerpc)
+url='https://github.com/coin-or/CoinUtils'
 license=(EPL)
-depends=(zlib bzip2 glpk lapack)
+depends=(zlib bzip2 glpk lapack coin-or-data-sample)
 makedepends=(gcc-fortran doxygen)
 groups=(coin-or)
-source=("https://www.coin-or.org/download/source/CoinUtils/CoinUtils-$pkgver.tgz")
-sha256sums=('1b24f8f6057661b3225d24f4e671527f53bf13aff66e06cbbbd4f20cc7d31dce')
+source=($pkgname-$pkgver.tar.gz::https://github.com/coin-or/CoinUtils/archive/refs/tags/releases/$pkgver.tar.gz)
+sha256sums=('6ea31d5214f7eb27fa3ffb2bdad7ec96499dd2aaaeb4a7d0abd90ef852fc79ca')
 
 build() {
-  cd CoinUtils-$pkgver
+  cd CoinUtils-releases-$pkgver
 
   ./configure --prefix=/usr --with-blas-lib='-lblas' --with-lapack-lib='-llapack' --with-glpk-lib='-lglpk' --enable-dependency-linking --build=${CHOST}
   make
 }
 
 check() {
-  cd CoinUtils-$pkgver
+  cd CoinUtils-releases-$pkgver
   make test
 }
 
 package() {
-  cd CoinUtils-$pkgver
-  PKG_CONFIG_LIBDIR="$pkgdir"/usr/lib/pkgconfig/ \
+  cd CoinUtils-releases-$pkgver
   make DESTDIR="$pkgdir" install
 }
