--- a/coin-or-cbc/PKGBUILD
+++ b/coin-or-cbc/PKGBUILD
@@ -4,46 +4,35 @@
 # Contributor: Daniel Ehlers <danielehlers@mindeye.net>
 
 pkgname=coin-or-cbc
-pkgver=2.10.5
-pkgrel=4
-pkgdesc="COIN-OR branch-and-cut mixed integer programming solver"
-arch=(x86_64 powerpc64le)
-url="https://projects.coin-or.org/Cbc"
+pkgver=2.10.7
+pkgrel=3
+pkgdesc='COIN-OR branch-and-cut mixed integer programming solver'
+arch=(x86_64 powerpc64le powerpc)
+url='https://github.com/coin-or/Cbc'
 license=(EPL)
 groups=(coin-or)
-depends=(coin-or-cgl coin-or-asl)
+depends=(coin-or-cgl)
 makedepends=(nauty)
-source=("https://www.coin-or.org/download/source/Cbc/Cbc-${pkgver}.tgz")
-sha256sums=('da1a945648679b21ba56b454b81e939451dc7951d9beb3c3e14f18f64dde6972')
+source=($pkgname-$pkgver.tar.gz::https://github.com/coin-or/Cbc/archive/refs/tags/releases/$pkgver.tar.gz)
+sha256sums=('5aa5490e2bc39c3c03f3636c9bca459cb3f8f365e0280fd0c4759ce3119e5b19')
 
 build() {
-  cd Cbc-$pkgver/Cbc
-  COIN_SKIP_PROJECTS="Sample" \
+  cd Cbc-releases-$pkgver
   ./configure --prefix=/usr \
-              --with-osi-lib="$(pkg-config --libs osi)" \
-              --with-osi-incdir="/usr/include/coin/" \
-              --with-clp-lib="$(pkg-config --libs clp)" \
-              --with-clp-incdir="/usr/include/coin/" \
-              --with-cgl-lib="$(pkg-config --libs cgl)" \
-              --with-cgl-incdir="/usr/include/coin/" \
-              --with-coinutils-lib="$(pkg-config --libs coinutils)" \
-              --with-coinutils-incdir="/usr/include/coin/" \
-              --enable-dependency-linking \
+              --build=${CHOST} \
               --enable-cbc-parallel \
-              --with-nauty-lib=/usr/lib/libnauty.a --with-nauty-incdir=/usr/include/nauty \
-	      --build=${CHOST}
+              --with-nauty-lib=/usr/lib/libnauty.a --with-nauty-incdir=/usr/include/nauty
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
 check() {
-  cd Cbc-$pkgver/Cbc
-#  make test
+  cd Cbc-releases-$pkgver/Cbc
+  make test
 }
 
 package() {
-  cd Cbc-$pkgver/Cbc
-  PKG_CONFIG_LIBDIR="$pkgdir"/usr/lib/pkgconfig/ \
+  cd Cbc-releases-$pkgver
   make DESTDIR="$pkgdir" install
 
 # Remove nauty from linker flags in pc file, it is statically compiled
