--- a/coin-or-mp/PKGBUILD
+++ b/coin-or-mp/PKGBUILD
@@ -6,14 +6,13 @@
 
 pkgname=coin-or-mp
 pkgver=1.8.4
-pkgrel=2
-pkgdesc="C-API library that supports most of the functionality of CLP (Coin LP), CBC (Coin Branch-and-Cut), and CGL (Cut Generation Library) projects"
-arch=(x86_64 powerpc64le)
-url="https://projects.coin-or.org/CoinMP"
+pkgrel=4
+pkgdesc='C-API library that supports most of the functionality of CLP (Coin LP), CBC (Coin Branch-and-Cut), and CGL (Cut Generation Library) projects'
+arch=(x86_64 powerpc64le powerpc)
+url='https://projects.coin-or.org/CoinMP'
 license=(EPL)
 groups=(coin-or)
 depends=(coin-or-cbc)
-provides=(coin-mp)
 source=(https://www.coin-or.org/download/source/CoinMP/CoinMP-$pkgver.tgz)
 sha256sums=('3459fb0ccbdd39342744684338984ac4cc153fb0434f4cae8cf74bd67490a38d')
 
