--- a/libixion/PKGBUILD
+++ b/libixion/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libixion
 pkgver=0.17.0
 pkgrel=1
 pkgdesc="A general purpose formula parser & interpreter"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://gitlab.com/ixion/ixion/blob/master/README.md"
 license=('custom')
 depends=('boost-libs' 'python')
