--- a/liborcus/PKGBUILD
+++ b/liborcus/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=liborcus
 pkgver=0.17.2
 pkgrel=1
 pkgdesc="File import filter library for spreadsheet documents."
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://gitlab.com/orcus/orcus/blob/master/README.md"
 license=('MPL')
 depends=('libixion')
