--- a/clisp/PKGBUILD
+++ b/clisp/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
 pkgname=clisp
 pkgver=2.49.93
-pkgrel=5.1
+pkgrel=6
 pkgdesc="ANSI Common Lisp interpreter, compiler and debugger"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
@@ -17,6 +17,7 @@ md5sums=('SKIP')
 
 build() {
   cd $pkgname
+  CFLAGS+=" -ffat-lto-objects" \
   ./configure --prefix=/usr --with-readline --with-ffcall src
 
   cd src
