--- a/texlive-latexextra/PKGBUILD
+++ b/texlive-latexextra/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Rémy Oudompheng <remy@archlinux.org>
 
 pkgname=texlive-latexextra
-pkgver=2021.61405
-_revnr=${pkgver#2021.}
+pkgver=2022.63034
+_revnr=${pkgver#2022.}
 pkgrel=1
 pkgdesc="TeX Live - Large collection of add-on packages for LaTeX"
 license=('GPL')
@@ -13,10 +13,11 @@ depends=('texlive-core'
          'perl-file-which' # for pdfannotextractor
         )
 optdepends=(
-  'python-pygments: for pygmentex'
-  'texlive-genericextra: to use the calctab package'
-  'texlive-pictures: to use the package overpic'
+  'inkscape: required for svg package'
   'java-environment: to use pdfannotextractor'
+  'python-pygments: for pygmentex'
+  'texlive-genericextra: required for calctab package'
+  'texlive-pictures: required for overpic package'
 )
 groups=('texlive-most')
 url='http://tug.org/texlive/'
@@ -24,7 +25,7 @@ source=("https://sources.archlinux.org/other/texlive/$pkgname-$pkgver-src.zip"
         "$pkgname.maps"
         "$pkgname.fmts")
 options=('!emptydirs')
-sha256sums=('610da569ff669ea269fe246aa8880d5e8e5c9813713dfc433aed7f0400c3d63e'
+sha256sums=('b1b2f1a5ac580890cfe5145f9aed064a6af57e87109e5ef991cc093e029c8fdf'
             'd53750a03a52472a1c7c5ba5142959ba382a5d69215471691c0b12c3663950ce'
             '828a9cf082b9a89a4aa0eec402a9c32b8056bb873e4a5dc92ce60aec2ea69435')
 
